youker-assistant (1.0.2-0ubuntu1) trusty; urgency=low

  * Perfect for parameter when checkbox checked.
  * Get the correct version information of OS.
  * Do system scan with thread.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Mon, 14 Apr 2014 15:26:18 +0800

youker-assistant (1.0.1-0ubuntu1) trusty; urgency=low

  * Modify display mode of weather forecast and system settings.
  * Add file manager and font style settings.
  * Improve system settings and restoring default settings.
  * Cache user account (not password).
  * Change the position of window control buttons.
  * Add configuration for Kysoft KuaiPan cloud client.
  * Add the instruction of Youker Assistant.
  * Open related folders when scanning items got double-clicked.
  * Notify users when operating the Kingsoft disk cloud configuration.
  * Modify Dbus starting method.
  
 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Thu, 20 Mar 2014 10:14:56 +0800

youker-assistant (1.0.0-0ubuntu1) trusty; urgency=low

  * Access Yahoo weather info.
  * Add Class LoginDialog and HttpAuth to login with Ubuntu Kylin forum account.
  * Cleanup browser cache, thumbnail cache and software configfile.
  * Completed global mouse theme.
  * Modify the icon on PolicyKit Dialog.
  * Adjust the display format of network traffic on the monitor ball.
  * Add ToolTip.qml.
  * Achieve the function about login with forum account.
  * Add FileManager.qml, filemanager.py, common.py, geditmanager.py and settings.py.
  * Reset default config value with Gio Settings and compizconfig.
  * Remove software recommand.

 -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 21 Feb 2014 16:36:44 +0800

youker-assistant (0.3.2-0ubuntu1) trusty; urgency=low

  * Refersh process list automatically and position the originally selected process(LP: #1261802).
  * Adjust the structure of QML project.
  * Add CD-ROM, Audio Card and WLan information.
  * Kill root process.
  * Add Device driver basic information.