@@ -3,8 +3,9 @@ youker-assistant (1.0.2-0ubuntu1) trusty; urgency=low
   * Perfect for parameter when checkbox checked.
   * Get the correct version information of OS.
   * Do system scan with thread.
+  * Use Python Socket and UUID to get LAN port, IP address and MAC address(LP: #1310882).
 
- -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Mon, 14 Apr 2014 15:26:18 +0800
+ -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Tue, 22 Apr 2014 11:22:15 +0800
 
 youker-assistant (1.0.1-0ubuntu1) trusty; urgency=low
 
